.provarCaches/00D5f000005vwGkEAI/objects/rstk__soconttch__c.object
<CustomObject>
    <description>soconttch__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>externalid</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soconttch_soconttc__r.rstk__externalid__c + &apos;_&apos; + TEXT(rstk__soconttch_rev__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soconttch_soconttc__r.Name + &apos;-&apos; + TEXT(rstk__soconttch_rev__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconttch_clause__c</fullName>
        <label>Clause Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__soconttch_comment__c</fullName>
        <label>Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconttch_cttrev__c</fullName>
        <label>CT Revision</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconttch_date__c</fullName>
        <label>Date of Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soconttch_rev__c</fullName>
        <label>Clause Revision</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconttch_soconttc__c</fullName>
        <label>CT Clause</label>
        <referenceTo>rstk__soconttc__c</referenceTo>
        <relationshipLabel>Contract Terms Clause Change History</relationshipLabel>
        <relationshipName>soconttchs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Contract Terms Clause Change History</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contract Terms Clause Change History  Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Terms Clause Change History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>